Ensures project gallery navigation arrows are always visible when a touch enabled device is detected.

--- a/app/assets/stylesheets/_projects-show.scss
+++ b/app/assets/stylesheets/_projects-show.scss
@@ -109,7 +109,8 @@ header.project {
     }
   }
 
-  &:hover {
+  &:hover,
+  &.touch-device {
     .arrow {
       opacity: 1;
     }
